--- a/starter_code/stylesheets/style.css
+++ b/starter_code/stylesheets/style.css
@@ -5,3 +5,216 @@ main-titles dark-grey: #2C303F;
 paragraph grey: #5b5e6d;
 nav grey: #5b5e6d;
 */
+
+
+
+body{
+    margin: 0%;
+}
+.white{
+    background-color: white;
+    width: 100%;
+    height: 150px;
+    position: absolute;
+}
+
+.logo img{
+    position: absolute;
+    float: left;
+    height: 140px;
+    top: 3%;
+    left: 2%;
+}
+.ham img{
+    height: 43px;
+    position: absolute;
+    top: 8%;
+    left: 83%;
+    float: right;
+    justify-content: center;
+}
+
+.header h1{
+    font-family: sans-serif;
+    color: #2C303F;
+    top: 19%;
+    font-size: 67px;
+    margin: 2%;
+    position: absolute;
+}
+
+.header p{
+    font-family: sans-serif;
+    color: #5b5e6d;
+    top: 328px;
+    font-size: 22px;
+    margin: 0%;
+    position: relative;
+    float: none;
+    justify-content: center;
+    left: 4%;
+    }
+
+    .email{
+        font-family: sans-serif;
+    border-style: solid;
+    border-width: 1px;
+    margin: 2%;
+    box-sizing: border-box;
+    width: 411px;
+    height: 40px;
+    text-align: left;
+    position: absolute;
+    top: 69%;
+    left: 0%;
+    font-size: 30px;
+    color: #5b5e6d;
+    }
+
+    .buttonstart{
+        position: absolute;
+        top: 75%;
+        left: 4%;
+        cursor: pointer;  
+        box-sizing: border-box;
+        align-items: flex-start;
+    text-align: center;
+    color: #ffff;
+    background-color: #192592;
+    box-sizing: border-box;
+    padding: 2px 6px 3px;
+    border-width: 2px;
+    border-style: outset;
+   
+    }
+
+    .signin{
+        position: absolute;
+        top: 137%;
+        left: 25%;
+        float: left;
+        font-size: 21px;
+        justify-content: center;
+    }
+
+    .imagenheader img{
+        height: 373px;
+        position: absolute;
+        top: 87%;
+        left: 2%;
+        float: left;
+        justify-content: center;
+    }
+
+    .good h1{
+        top: 144%;
+    left: 7%;
+    margin: 2%;
+    position: absolute;
+    justify-content: center;
+    font-size: 42px;
+    text-align: center;
+    }
+    .good p{
+        font-family: sans-serif;
+        color: #5b5e6d;
+        top: 160%;
+        font-size: 17px;
+        margin: 2%;
+        position: absolute;
+        justify-content: center;
+        left: 17%;
+        text-align: center;
+    }
+
+    .discover{
+        font-family: sans-serif;
+        border-style: solid;
+        border-width: 1px;
+        margin: 2%;
+        box-sizing: border-box;
+        width: 228px;
+        height: 40px;
+        text-align: center;
+        position: absolute;
+        top: 170%;
+        left: 25%;
+        font-size: 30px;
+        color: #5b5e6d
+
+    }
+
+    .airbnb img{
+        height: 94px;
+        position: absolute;
+        top: 184%;
+        left: 15%;
+        float: left;
+        justify-content: center;
+    }
+
+    .capitalone img{
+        height: 99px;
+    position: absolute;
+    top: 200%;
+    left: 20%;
+    float: left;
+    justify-content: center;
+    }
+
+    .harvardlogo img{
+        height: 93px;
+    position: absolute;
+    top: 219%;
+    left: 11%;
+    float: left;
+    justify-content: center;
+        }
+    
+    .angelestimes img{
+        height: 47px;
+        position: absolute;
+        top: 238%;
+        left: 14%;
+        float: left;
+        justify-content: center;
+    }    
+
+    .oraclelogo img{
+        height: 35px;
+    position: absolute;
+    top: 253%;
+    left: 22%;
+    float: left;
+    justify-content: center;
+    }
+
+    .ticket img{
+        height: 43px;
+        position: absolute;
+        top: 266%;
+        left: 19%;
+        float: left;
+        justify-content: center;
+    }
+
+    .try{
+        font-family: sans-serif;
+        color: #5b5e6d;
+        top: 272%;
+        font-size: 30px;
+        margin: 2%;
+        position: absolute;
+        justify-content: center;
+        left: 30%;
+        text-align: center;
+    }
+
+    .signin2{
+        position: absolute;
+        top: 285%;
+        left: 25%;
+        float: left;
+        font-size: 21px;
+        justify-content: center;
+    }
